<resources>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="getting_started">Getting Started</string>
    <string name="skip">Skip</string>
    <string name="title_on_boarding">Welcome to UGro App !</string>
    <string name="description_on_boarding">Here is an open-source project which shows sweet &amp; original on boarding ViewPagers that follows Material Design Guidelines</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="forget_password">Forget Password?</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="term_amp_conditions_apply"><![CDATA[Term & Conditions Apply]]></string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="form_username">UserName or Email</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_pswd">Forgot your Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_id">Email id</string>
    <string name="mobile_no">Mobile No</string>
    <string name="reset_Password">Reset Password</string>
    <string name="hello">Hello</string>
    <string name="nupayDemo">Nupay Demo</string>
    <string name="welcome_to_qnach_mandate">Welcome to qNach Mandate</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="report">Reports</string>
    <string name="setting">Settings</string>
    <string name="my_acc">My Account</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="helpDesk">HelpDesk</string>
    <string name="sign_out">Sign Out</string>
    <string name="nach_pdf">NACH PDF</string>
    <string name="generated">Generated</string>
    <string name="physical_nach">Physical NACH</string>
    <string name="scanned">Scanned</string>
    <string name="today">Today</string>
    <string name="last_week">Last 7 Days</string>
    <string name="last_month">Last 30 Days</string>
    <string name="personal_details">Personal Details</string>
    <string name="loan_id">File ID/Loan Number/Loan ID/Customer ID<sup>*</sup></string>
    <string name="benef_name">Beneficiary Name<sup>*</sup></string>
    <string name="customer_mobile">Customer Mobile<sup>*</sup></string>
    <string name="customer_email">Customer Email<sup>*</sup></string>
    <string name="next">Next</string>
    <string name="account_details">Account Details</string>
    <string name="ifsc_code">IFSC Code<sup>*</sup></string>
    <string name="bank_name">Customer Bank<sup>*</sup></string>
    <string name="bank_address">Bank Add.<sup>*</sup></string>
    <string name="cust_acc_no">Customer Account Number<sup>*</sup></string>
    <string name="select_acc_type">Select Account Type<sup>*</sup></string>
    <string name="back">Back</string>
    <string name="mandate_details">Mandate Details</string>
    <string name="ach_amt">Ach Amount</string>
    <string name="mandate_date">Mandate Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="or">OR</string>
    <string name="until_cancelled">Until Cancelled</string>
    <string name="reference_number">Reference No</string>
    <string name="nach_gen">NACH GENERATE</string>
    <string name="customer_details">Customer Details</string>
    <string name="_mobile">Mobile No<sup>*</sup></string>
    <string name="_email">Email<sup>*</sup></string>
    <string name="first_collection_date">First Collection Date</string>
    <string name="final_collection_date">Final Collection Date</string>
    <string name="processing">Processing</string>
    <string name="name">Name:</string>
    <string name="cust_id">Cust Id.:</string>
    <string name="ach_amtt">Ach Amount:</string>
    <string name="nupay_ref">Nupay Ref.:</string>
    <string name="sales_query_code">Sales Query Code:</string>
    <string name="date">Date:</string>
    <string name="reason">Reason:</string>
    <string name="withdraw">Withdraw</string>
    <string name="pending">Pending</string>
    <string name="inProcess">InProcess</string>
    <string name="rejected">Rejected</string>
    <string name="umrn">Umrn:</string>
    <string name="sts_desc">Status Des.:</string>
    <string name="ok">Ok</string>
    <string name="reset_password">Reset Password</string>
    <string name="proceed">Proceed</string>
    <string-array name="bank">
        <item>PNB</item>
        <item>Karnataka Bank</item>
        <item>ICICI Bank</item>
        <item>HDFC</item>
    </string-array>
    <string-array name="accType">
        <item>SB</item>
        <item>CA</item>
        <item>CC</item>
        <item>Others</item>
    </string-array>
    <string-array name="category">
        <item>Loan Instalment Payment</item>
        <item>Others</item>
    </string-array>
    <string-array name="frequency">
        <item>MNTH</item>
        <item>ADHO</item>
    </string-array>
    <string name="enter_four_digit_otp_send_to_your_registered_number">Enter 4 digit OTP send to your registered number</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="change_password">Change Password</string>
    <string name="contact_person">Contact Person:</string>
    <string name="nupay">Nupay</string>
    <string name="contact_person_mail">Contact Person Email:</string>
    <string name="contact_email">info@nupay.co.in</string>
    <string name="contactt_personn">Contact Person Name:</string>
    <string name="nupay_admin">Nupay Admin</string>
    <string name="contact_person_email">abhimanyu.gupta@nupay.co.in</string>
    <string name="about_uss">Automate your NACH mandate registration by capturing the image at the point of Sale. Easy to use app to capture NACH mandate from images, enhance and initiate processing through Sponsor bank. Simply Scan the mandate form at source and upload on the cloud with unique identifier for immediate processing as per Bank/NPCI standards.</string>
    <string name="nupay_demo">Nupay Demo</string>
    <string name="gurugram">Gurgaon</string>
    <string name="info">Info</string>
    <string name="company">Company:</string>
    <string name="entellus_bsns_soln">Entellus Business Solutions Pvt. Ltd.</string>
    <string name="email">Email:</string>
    <string name="nupaydemo">nupaydemo</string>
    <string name="title_home">Home</string>
    <string name="reports">Reports</string>
    <string name="bank_details">Bank Details</string>
    <string name="account_holder_name">Account Holder Name<sup>*</sup></string>
    <string name="confirm_account_number">Confirm Account Number<sup>*</sup></string>
    <string name="select_bank">Select Bank<sup>*</sup></string>
    <string name="loan_installment_payment">Loan Installment Payment</string>
    <string name="mnth">MNTH</string>
    <string name="qnach">qNach</string>
    <string name="enter_loan_id">Enter Loan Id</string>
    <string name="enter_benef_name">Enter Beneficiary Name</string>
    <string name="enter_valid_mobile_number">Enter Valid Mobile Number</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="download">Download</string>
    <string name="pdf_gen_successfully">Pdf Generated Successfully</string>
    <string name="share_via">You May Share via SMS or whatsapp etc.</string>
    <string name="cust_id_">Cust ID:</string>
    <string name="acc_holder_name">Account Holder Name:</string>
    <string name="mobile_noo">Mobile Number:</string>
    <string name="ach_amnt">Ach Amount:</string>
    <string name="acc_number">Account Number:</string>
    <string name="bank_namee">Bank Name:</string>
    <string name="ifsc_codee">IFSC Code:</string>
    <string name="previous">Previous</string>
    <string name="error_loan_id">Enter Loan Id</string>
    <string name="error_beneficiary_name">Enter Beneficiary Name</string>
    <string name="error_mobile_no">Enter Mobile Number</string>
    <string name="error_mobile_validation">Enter Valid Mobile Number</string>
    <string name="error_mail_id">Enter Email Id</string>
    <string name="error_mail_validation">Enter Valid Email Id</string>
    <string name="error_ifsc_code">Enter IFSC Code</string>
    <string name="error_ifsc_code_validation">Enter Valid IFSC Code</string>
    <string name="error_customer_bank">Enter Customer Bank</string>
    <string name="error_bank_address">Enter Bank Address</string>
    <string name="error_customer_account_number">Enter Customer Account Number</string>
    <string name="error_customer_account_number_validation">Enter valid Customer Account Number</string>
    <string name="error_account_type">Select Account Type</string>
    <string name="error_category">Select Category</string>
    <string name="error_frequency">Select Frequency</string>
    <string name="error_ach_amount">Enter Ach Amount</string>
    <string name="error_mandate_date">Enter Mandate Date</string>
    <string name="error_start_date">Enter Start Date</string>
    <string name="error_end_date">Enter End Date</string>
    <string name="error_ref_no">Enter Reference Number</string>
    <string name="sort_today">Today</string>
    <string name="sort_yesterday">Yesterday</string>
    <string name="sort_seven_days">Last 7 Days</string>
    <string name="last_30">Last 30 Days</string>
    <string name="sb">SB</string>
    <string name="dialogTitle">Alert</string>
    <string name="message">Are you sure you want to leave this process?</string>
    <string name="generate_pdf">Generate \n PDF</string>
    <string name="scan_nach_mandate">Scan Nach \n Mandate</string>
    <string name="gen_link_for_emandate">Generate Link \n for eMandate</string>
    <string name="reg_emandate">Register \n eMandate</string>
    <string name="loginn">Login</string>
    <string name="user_name">UserName or Mobile No</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot Your Password</string>
    <string name="generate">Generate</string>
    <string name="pdf">PDF</string>
    <string name="scan_nach">Scan Nach</string>
    <string name="mandate">Mandate</string>
    <string name="generate_link">Generate Link</string>
    <string name="for_emandate">For eMandate</string>
    <string name="register">Register</string>
    <string name="emandate">eMandate</string>
    <string name="scan">Scan</string>
    <string name="e_Mandate">E-Mandate</string>
    <string name="nach_pdf_gend">Nach PDF \n Generated</string>
    <string name="phy_nach_scanned">Physical NACH \n Scanned</string>
    <string name="emandates_pending">eMandates \n Pending</string>
    <string name="emandates_completed">eMandates \n Completed</string>
    <string name="error_first_coll_date">Select First Collection Date</string>
    <string name="error_final_coll_date">Select Final Collection Date</string>
    <string name="error_acc_holder">Enter Account Holder Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_acc_no">Enter Account Number</string>
    <string name="error_reenter_acc_no">Re Enter Account Number</string>
    <string name="acc_no_mismatch">Account Number Mismatch</string>
    <string name="select_a_bank">Select a Bank</string>
    <string name="select_a_category">Select a Category</string>
    <string name="select_frequency">Select Frequency</string>
</resources>