<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_mandate_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mandate_details"
        android:layout_marginTop="@dimen/_18dp"
        android:textSize="@dimen/_18ssp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_ach_amt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_mandate_details"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:background="@color/white"
        android:hint="@string/ach_amt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_ach_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_mandate_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:background="@color/white"
        android:hint="@string/mandate_date"
        app:layout_constraintTop_toBottomOf="@id/et_ach_amt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_mandate_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:background="@color/white"
        android:hint="@string/start_date"
        app:layout_constraintTop_toBottomOf="@id/et_mandate_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_start_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginHorizontal="@dimen/_16dp"
        app:layout_constraintTop_toBottomOf="@id/et_start_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_end_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:hint="@string/end_date"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_16dp"
        android:paddingVertical="@dimen/dp_10"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_end_date" />

    <CheckBox
        android:id="@+id/chkbx_check"
        app:layout_constraintTop_toBottomOf="@id/tv_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:text="@string/until_cancelled"
        android:textSize="@dimen/sp_14"
        android:paddingHorizontal="@dimen/dp_6"
        android:checked="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_ref_no"
        app:layout_constraintTop_toBottomOf="@id/chkbx_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginHorizontal="@dimen/_16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_reference_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:hint="@string/reference_number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_18dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@color/light_blue"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_gen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nach_gen"
            android:layout_marginStart="@dimen/_4sdp"
            android:background="@color/light_blue"
            android:textColor="@color/black"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>