<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_customer_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/_18ssp"
        android:text="@string/customer_details"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/_16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_70dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_loan_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8dp"
                android:layout_marginTop="@dimen/_20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_personal_details"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:errorEnabled="true"
                android:background="@color/white"
                android:hint="@string/loan_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_customer_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_customer_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_benef_name"
                android:layout_marginTop="@dimen/_18sdp"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:errorEnabled="true"
                android:hint="@string/_mobile"
                android:background="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_cust_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/et_customer_mobile"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginHorizontal="@dimen/_8dp"
                app:counterEnabled="true"
                app:counterMaxLength="80"
                app:errorEnabled="true"
                android:hint="@string/_email"
                android:background="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_ach_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_mandate_details"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginHorizontal="@dimen/_8dp"
                android:background="@color/white"
                android:hint="@string/ach_amt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_ach_amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_ref_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginHorizontal="@dimen/_8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_first_coll_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:hint="@string/first_collection_date"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_final_collection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginHorizontal="@dimen/_8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_final_coll_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:hint="@string/final_collection_date"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_16dp"
                android:paddingVertical="@dimen/dp_10"
                android:text="@string/or"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_gravity="center_horizontal"/>

            <CheckBox
                android:id="@+id/chkbx_check"
                app:layout_constraintTop_toBottomOf="@id/tv_or"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:text="@string/until_cancelled"
                android:textSize="@dimen/sp_15"
                android:paddingHorizontal="@dimen/dp_6"
                android:checked="true"/>
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_20dp"
        android:background="@color/light_blue"
        android:text="@string/next"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>